--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SVM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJctCZItaIw5grn/fM6vKZ",
+      "authorship_tag": "ABX9TyP5bFAlidOnYu8GKVOxiy8L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,13 +67,13 @@
       "source": [
         "import pandas as pd\n",
         "from pandas import read_csv\n",
-        "from sklearn.utils import shuffle\n",
-        "from sklearn.model_selection import train_test_split\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.utils import shuffle\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.svm import SVC"
       ],
       "execution_count": 0,
       "outputs": []
@@ -99,16 +99,16 @@
       "metadata": {
         "id": "GpG0dbjhzueg",
         "colab_type": "code",
+        "outputId": "b032fa3d-41f1-4828-bcf3-fcffaf8e7144",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        },
-        "outputId": "d0dbbe0a-57a9-48c4-e87d-641119000f1d"
+        }
       },
       "source": [
         "df"
       ],
-      "execution_count": 64,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 79
         }
       ]
     },
@@ -272,11 +272,7 @@
       "metadata": {
         "id": "CNsw2zVlzSwc",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        },
-        "outputId": "24b3754a-1e02-4a3b-d0f5-a63d8289800c"
+        "colab": {}
       },
       "source": [
         "target = df['class']\n",
@@ -287,37 +283,24 @@
         "rows = list(range(100,150))\n",
         "df = df.drop(df.index[rows])"
       ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-68-82238f665896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3939\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3940\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3941\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3942\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3943\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "liT4Dc7i3wpa",
         "colab_type": "code",
+        "outputId": "9998965b-6ae5-4285-f1ff-fc442a17caff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        },
-        "outputId": "a514c2da-5f8e-4de5-bff7-55f3346c8bd4"
+        }
       },
       "source": [
         "df"
       ],
-      "execution_count": 69,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -462,7 +445,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 81
         }
       ]
     },
@@ -481,7 +464,7 @@
       "metadata": {
         "id": "P_9jwtsh0vuP",
         "colab_type": "code",
-        "outputId": "4d41b908-9262-4915-cd8f-7dc587ee30cc",
+        "outputId": "5a4e792f-d23b-446c-a0e3-fd326db0afc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -502,7 +485,7 @@
         "plt.scatter(versicolor_x,versicolor_y,marker='_',color='red')\n",
         "plt.show()"
       ],
-      "execution_count": 70,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -593,27 +576,18 @@
       "metadata": {
         "id": "q0WEZAsq2RxF",
         "colab_type": "code",
-        "outputId": "bf12da6b-0508-4c9b-f62a-2e3991800def",
+        "outputId": "c3c1775d-c701-4685-f580-f3f41e6e0be5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 141
         }
       },
       "source": [
         "clf = SVC(kernel='linear')\n",
-        "clf.fit(x_train,y_train)\n",
-        "y_pred = clf.predict(x_test)\n",
-        "print(accuracy_score(y_test,y_pred))"
+        "clf.fit(x_train,y_train)"
       ],
-      "execution_count": 73,
+      "execution_count": 87,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1.0\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "stream",
           "text": [
@@ -621,6 +595,57 @@
             "  y = column_or_1d(y, warn=True)\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+              "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='linear',\n",
+              "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+              "    tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K7LVQHs56Nch",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the accuracy of the SVM model "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6eDqIksf6MTz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7c43f3d4-769c-439a-8f66-ccc728602bca"
+      },
+      "source": [
+        "y_pred = clf.predict(x_test)\n",
+        "print(accuracy_score(y_test,y_pred))"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.0\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -631,7 +656,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Create the SVM model from scratch<br>\n",
+        "# **Create the SVM model from scratch**<br>\n",
         "\n",
         "α(0.0001) is the learning rate and the regularization parameter λ is set to 1/epochs. Therefore, the regularizing value reduces the number of epochs increases."
       ]
@@ -714,15 +739,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0MnmhWvU6blr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Determine the accuracy of the scratch model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DufyB6pf3C5R",
         "colab_type": "code",
+        "outputId": "678ccad7-891d-4759-b3e4-19d03c83423c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "10b33fdb-4c2a-4a10-a4ca-2dde4ea2cb0a"
+        }
       },
       "source": [
         "## Predict\n",
@@ -736,7 +771,7 @@
         "\n",
         "print(accuracy_score(y_test,predictions))"
       ],
-      "execution_count": 76,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
