--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "GpG0dbjhzueg",
         "colab_type": "code",
-        "outputId": "7d5b7921-ff87-46ee-d663-85db28f0f43f",
+        "outputId": "c54d982f-b262-4f3c-93d8-3bebe5109c69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
@@ -107,7 +107,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 19,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 38
         }
       ]
     },
@@ -300,7 +300,7 @@
       "metadata": {
         "id": "P_9jwtsh0vuP",
         "colab_type": "code",
-        "outputId": "829fe1a4-f21f-4843-9dbb-88806322a9ce",
+        "outputId": "7afbbc17-f23c-4563-8140-cb1810a6f2e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -321,7 +321,7 @@
         "plt.scatter(versicolor_x,versicolor_y,marker='o',color='red')\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,16 +336,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "C_SHZ-GB1fAD",
-        "colab_type": "text"
-      },
-      "source": [
-        "Drop sepal-length and petal-length Sepal. This will make it a 2 dimensional problem. "
       ]
     },
     {
@@ -402,119 +392,13 @@
       "metadata": {
         "id": "GMsRueDM_EUZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "6df68bcb-7d5c-4a3f-ed4a-88e4e928dd3d"
+        "colab": {}
       },
       "source": [
         "#x_train"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[6.7, 3. , 5. , 1.7],\n",
-              "       [5.9, 3. , 4.2, 1.5],\n",
-              "       [5.6, 2.5, 3.9, 1.1],\n",
-              "       [4.5, 2.3, 1.3, 0.3],\n",
-              "       [4.8, 3. , 1.4, 0.3],\n",
-              "       [5.7, 2.8, 4.5, 1.3],\n",
-              "       [6.6, 2.9, 4.6, 1.3],\n",
-              "       [5.5, 2.4, 3.8, 1.1],\n",
-              "       [4.4, 3. , 1.3, 0.2],\n",
-              "       [5.1, 3.5, 1.4, 0.3],\n",
-              "       [6.2, 2.9, 4.3, 1.3],\n",
-              "       [6.3, 2.5, 4.9, 1.5],\n",
-              "       [5.8, 2.7, 4.1, 1. ],\n",
-              "       [4.8, 3.4, 1.9, 0.2],\n",
-              "       [5.9, 3.2, 4.8, 1.8],\n",
-              "       [4.4, 3.2, 1.3, 0.2],\n",
-              "       [4.9, 3.1, 1.5, 0.1],\n",
-              "       [5.5, 4.2, 1.4, 0.2],\n",
-              "       [5.8, 4. , 1.2, 0.2],\n",
-              "       [5.6, 2.9, 3.6, 1.3],\n",
-              "       [4.9, 3.1, 1.5, 0.1],\n",
-              "       [6. , 2.7, 5.1, 1.6],\n",
-              "       [5.6, 3. , 4.1, 1.3],\n",
-              "       [5. , 3.3, 1.4, 0.2],\n",
-              "       [5. , 3. , 1.6, 0.2],\n",
-              "       [4.6, 3.2, 1.4, 0.2],\n",
-              "       [4.3, 3. , 1.1, 0.1],\n",
-              "       [5. , 3.6, 1.4, 0.2],\n",
-              "       [4.8, 3.1, 1.6, 0.2],\n",
-              "       [7. , 3.2, 4.7, 1.4],\n",
-              "       [5.7, 2.9, 4.2, 1.3],\n",
-              "       [5.7, 3. , 4.2, 1.2],\n",
-              "       [6.1, 3. , 4.6, 1.4],\n",
-              "       [5.2, 4.1, 1.5, 0.1],\n",
-              "       [4.6, 3.1, 1.5, 0.2],\n",
-              "       [5.1, 3.4, 1.5, 0.2],\n",
-              "       [6.2, 2.2, 4.5, 1.5],\n",
-              "       [5.5, 2.3, 4. , 1.3],\n",
-              "       [5.7, 3.8, 1.7, 0.3],\n",
-              "       [5.8, 2.6, 4. , 1.2],\n",
-              "       [4.7, 3.2, 1.3, 0.2],\n",
-              "       [5.1, 3.8, 1.9, 0.4],\n",
-              "       [6.3, 2.3, 4.4, 1.3],\n",
-              "       [6. , 2.9, 4.5, 1.5],\n",
-              "       [4.9, 3. , 1.4, 0.2],\n",
-              "       [5. , 2.3, 3.3, 1. ],\n",
-              "       [6.5, 2.8, 4.6, 1.5],\n",
-              "       [6. , 2.2, 4. , 1. ],\n",
-              "       [6.4, 2.9, 4.3, 1.3],\n",
-              "       [5.4, 3.4, 1.7, 0.2],\n",
-              "       [5. , 3.5, 1.6, 0.6],\n",
-              "       [5.2, 3.4, 1.4, 0.2],\n",
-              "       [5. , 2. , 3.5, 1. ],\n",
-              "       [4.8, 3.4, 1.6, 0.2],\n",
-              "       [5.1, 3.7, 1.5, 0.4],\n",
-              "       [5.7, 2.8, 4.1, 1.3],\n",
-              "       [5.6, 2.7, 4.2, 1.3],\n",
-              "       [5.8, 2.7, 3.9, 1.2],\n",
-              "       [5.5, 2.6, 4.4, 1.2],\n",
-              "       [5.1, 3.5, 1.4, 0.2],\n",
-              "       [5.1, 3.8, 1.6, 0.2],\n",
-              "       [5.4, 3. , 4.5, 1.5],\n",
-              "       [4.4, 2.9, 1.4, 0.2],\n",
-              "       [5.7, 4.4, 1.5, 0.4],\n",
-              "       [5.1, 3.3, 1.7, 0.5],\n",
-              "       [5.5, 2.4, 3.7, 1. ],\n",
-              "       [4.7, 3.2, 1.6, 0.2],\n",
-              "       [4.9, 3.1, 1.5, 0.1],\n",
-              "       [5.4, 3.7, 1.5, 0.2],\n",
-              "       [6.1, 2.8, 4. , 1.3],\n",
-              "       [6. , 3.4, 4.5, 1.6],\n",
-              "       [5. , 3.4, 1.5, 0.2],\n",
-              "       [4.6, 3.4, 1.4, 0.3],\n",
-              "       [5.7, 2.6, 3.5, 1. ],\n",
-              "       [6.3, 3.3, 4.7, 1.6],\n",
-              "       [5.2, 2.7, 3.9, 1.4],\n",
-              "       [5.5, 2.5, 4. , 1.3],\n",
-              "       [6.7, 3.1, 4.4, 1.4],\n",
-              "       [5.3, 3.7, 1.5, 0.2],\n",
-              "       [5. , 3.2, 1.2, 0.2],\n",
-              "       [5.5, 3.5, 1.3, 0.2],\n",
-              "       [6.7, 3.1, 4.7, 1.5],\n",
-              "       [4.6, 3.6, 1. , 0.2],\n",
-              "       [5. , 3.5, 1.3, 0.3],\n",
-              "       [6.6, 3. , 4.4, 1.4],\n",
-              "       [5.4, 3.9, 1.7, 0.4],\n",
-              "       [5.4, 3.9, 1.3, 0.4],\n",
-              "       [6.4, 3.2, 4.5, 1.5],\n",
-              "       [6.9, 3.1, 4.9, 1.5],\n",
-              "       [5.4, 3.4, 1.5, 0.4]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -531,7 +415,7 @@
       "metadata": {
         "id": "q0WEZAsq2RxF",
         "colab_type": "code",
-        "outputId": "aea848d5-06c8-4341-9e7d-fc86a1536cd5",
+        "outputId": "9e2f496c-e51e-42b7-ae61-1396d46fffed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -541,7 +425,7 @@
         "clf = SVC(kernel='linear')\n",
         "clf.fit(x_train,y_train)"
       ],
-      "execution_count": 30,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 43
         }
       ]
     },
@@ -583,7 +467,7 @@
       "metadata": {
         "id": "6eDqIksf6MTz",
         "colab_type": "code",
-        "outputId": "6a051fea-b83f-41c4-e54b-15c2477abc67",
+        "outputId": "f52dc4c8-29eb-489f-9d4a-8419eea6a014",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -593,7 +477,7 @@
         "y_pred = clf.predict(x_test)\n",
         "print(accuracy_score(y_test,y_pred))"
       ],
-      "execution_count": 31,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +592,7 @@
       "metadata": {
         "id": "DufyB6pf3C5R",
         "colab_type": "code",
-        "outputId": "ba150fbb-fc25-4be1-f3b7-90c708205e50",
+        "outputId": "84fdb2c7-3d58-4e25-c474-cd38d48ec2a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -726,12 +610,12 @@
         "\n",
         "print(accuracy_score(y_test,predictions))"
       ],
-      "execution_count": 35,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.9\n"
+            "1.0\n"
           ],
           "name": "stdout"
         }
