--- a/SVM_MultiClass.ipynb
+++ b/SVM_MultiClass.ipynb
@@ -6,7 +6,7 @@
       "name": "SVM MultiClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOBGwD8Epi+TmHKy4TyU9Di",
+      "authorship_tag": "ABX9TyNE+D2fDnyYs6IhWJxid2W4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,7 +213,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Separate the the labels fromt he features"
+        "Separate the the labels from the features"
       ]
     },
     {
@@ -331,6 +331,22 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4q-MtsCgZMVS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# View the best parameters for the model found using grid search\n",
+        "print('Best C:',svm_model.best_estimator_.C,\"\\n\") \n",
+        "print('Best Kernel:',svm_model.best_estimator_.kernel,\"\\n\")\n",
+        "print('Best Gamma:',svm_model.best_estimator_.gamma,\"\\n\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "btda8R-pVFbT",
@@ -375,12 +391,7 @@
       },
       "source": [
         "# View the accuracy score\n",
-        "print('Best score for training data:', svm_model.best_score_,\"\\n\") \n",
-        "\n",
-        "# View the best parameters for the model found using grid search\n",
-        "print('Best C:',svm_model.best_estimator_.C,\"\\n\") \n",
-        "print('Best Kernel:',svm_model.best_estimator_.kernel,\"\\n\")\n",
-        "print('Best Gamma:',svm_model.best_estimator_.gamma,\"\\n\")"
+        "print('Best score for training data:', svm_model.best_score_,\"\\n\") "
       ],
       "execution_count": 0,
       "outputs": []
