--- a/SVM_MultiClass.ipynb
+++ b/SVM_MultiClass.ipynb
@@ -6,7 +6,7 @@
       "name": "SVM MultiClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNE+D2fDnyYs6IhWJxid2W4",
+      "authorship_tag": "ABX9TyNC1KubBbWvEWDKJdsV4Vkb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,13 +60,9 @@
         "from sklearn.svm import SVC\n",
         "from sklearn.metrics import confusion_matrix,classification_report\n",
         "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
-        "# Input data files are available in the \"../input/\" directory.\n",
-        "# For example, running this (by clicking run or pressing Shift+Enter) will list the files in the input directory\n",
+        "from sklearn import preprocessing\n",
         "\n",
-        "import os\n",
-        "#print(os.listdir(\"../input\"))\n",
-        "\n",
-        "# Any results you write to the current directory are saved as output."
+        "import os"
       ],
       "execution_count": 0,
       "outputs": []
@@ -256,7 +252,7 @@
       },
       "source": [
         "# Transforming non numerical labels into numerical labels\n",
-        "from sklearn import preprocessing\n",
+        "\n",
         "encoder = preprocessing.LabelEncoder()\n",
         "\n",
         "# encoding train labels \n",
