--- a/SVM_MultiClass.ipynb
+++ b/SVM_MultiClass.ipynb
@@ -6,7 +6,7 @@
       "name": "SVM MultiClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNC1KubBbWvEWDKJdsV4Vkb",
+      "authorship_tag": "ABX9TyM101chxDIOhngoqNWlRxqL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,6 +234,32 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e7HH236IeCt4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SUZz1VtzeJIe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_train"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AEyJFV0HTyxg",
@@ -307,6 +333,20 @@
       },
       "source": [
         "HyperParameter tuning using grid search and cross validation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q7K3A1fHfNA9",
+        "colab_type": "text"
+      },
+      "source": [
+        "With an SVM you are searching for two things: <br>\n",
+        ">a hyperplane with the largest minimum margin, \n",
+        ">a hyperplane that correctly separates as many instances as possible. <br><br>\n",
+        "The problem is that you will not always be able to get both things. <br><br>\n",
+        "The c parameter determines how great your desire is for a hyperplane that correctly separates as many instances as possible."
       ]
     },
     {
