--- a/wolvesAndCows.ipynb
+++ b/wolvesAndCows.ipynb
@@ -48,31 +48,31 @@
       "metadata": {
         "id": "H1ozWgrYQGMG",
         "colab_type": "code",
+        "outputId": "5c36eaa6-3a12-41d2-bf86-ff7f5ebe8a73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 708
-        },
-        "outputId": "65b290fe-17d2-45e0-a3f1-235f22f7b878"
+        }
       },
       "source": [
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 1,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'cloned-repo'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 76, done.\u001b[K\n",
-            "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (75/75), done.\u001b[K\n",
-            "remote: Total 613 (delta 44), reused 4 (delta 1), pack-reused 537\u001b[K\n",
-            "Receiving objects: 100% (613/613), 26.28 MiB | 20.19 MiB/s, done.\n",
-            "Resolving deltas: 100% (379/379), done.\n",
-            "/content/cloned-repo\n",
+            "remote: Enumerating objects: 79, done.\u001b[K\n",
+            "remote: Counting objects:   1% (1/79)\u001b[K\rremote: Counting objects:   2% (2/79)\u001b[K\rremote: Counting objects:   3% (3/79)\u001b[K\rremote: Counting objects:   5% (4/79)\u001b[K\rremote: Counting objects:   6% (5/79)\u001b[K\rremote: Counting objects:   7% (6/79)\u001b[K\rremote: Counting objects:   8% (7/79)\u001b[K\rremote: Counting objects:  10% (8/79)\u001b[K\rremote: Counting objects:  11% (9/79)\u001b[K\rremote: Counting objects:  12% (10/79)\u001b[K\rremote: Counting objects:  13% (11/79)\u001b[K\rremote: Counting objects:  15% (12/79)\u001b[K\rremote: Counting objects:  16% (13/79)\u001b[K\rremote: Counting objects:  17% (14/79)\u001b[K\rremote: Counting objects:  18% (15/79)\u001b[K\rremote: Counting objects:  20% (16/79)\u001b[K\rremote: Counting objects:  21% (17/79)\u001b[K\rremote: Counting objects:  22% (18/79)\u001b[K\rremote: Counting objects:  24% (19/79)\u001b[K\rremote: Counting objects:  25% (20/79)\u001b[K\rremote: Counting objects:  26% (21/79)\u001b[K\rremote: Counting objects:  27% (22/79)\u001b[K\rremote: Counting objects:  29% (23/79)\u001b[K\rremote: Counting objects:  30% (24/79)\u001b[K\rremote: Counting objects:  31% (25/79)\u001b[K\rremote: Counting objects:  32% (26/79)\u001b[K\rremote: Counting objects:  34% (27/79)\u001b[K\rremote: Counting objects:  35% (28/79)\u001b[K\rremote: Counting objects:  36% (29/79)\u001b[K\rremote: Counting objects:  37% (30/79)\u001b[K\rremote: Counting objects:  39% (31/79)\u001b[K\rremote: Counting objects:  40% (32/79)\u001b[K\rremote: Counting objects:  41% (33/79)\u001b[K\rremote: Counting objects:  43% (34/79)\u001b[K\rremote: Counting objects:  44% (35/79)\u001b[K\rremote: Counting objects:  45% (36/79)\u001b[K\rremote: Counting objects:  46% (37/79)\u001b[K\rremote: Counting objects:  48% (38/79)\u001b[K\rremote: Counting objects:  49% (39/79)\u001b[K\rremote: Counting objects:  50% (40/79)\u001b[K\rremote: Counting objects:  51% (41/79)\u001b[K\rremote: Counting objects:  53% (42/79)\u001b[K\rremote: Counting objects:  54% (43/79)\u001b[K\rremote: Counting objects:  55% (44/79)\u001b[K\rremote: Counting objects:  56% (45/79)\u001b[K\rremote: Counting objects:  58% (46/79)\u001b[K\rremote: Counting objects:  59% (47/79)\u001b[K\rremote: Counting objects:  60% (48/79)\u001b[K\rremote: Counting objects:  62% (49/79)\u001b[K\rremote: Counting objects:  63% (50/79)\u001b[K\rremote: Counting objects:  64% (51/79)\u001b[K\rremote: Counting objects:  65% (52/79)\u001b[K\rremote: Counting objects:  67% (53/79)\u001b[K\rremote: Counting objects:  68% (54/79)\u001b[K\rremote: Counting objects:  69% (55/79)\u001b[K\rremote: Counting objects:  70% (56/79)\u001b[K\rremote: Counting objects:  72% (57/79)\u001b[K\rremote: Counting objects:  73% (58/79)\u001b[K\rremote: Counting objects:  74% (59/79)\u001b[K\rremote: Counting objects:  75% (60/79)\u001b[K\rremote: Counting objects:  77% (61/79)\u001b[K\rremote: Counting objects:  78% (62/79)\u001b[K\rremote: Counting objects:  79% (63/79)\u001b[K\rremote: Counting objects:  81% (64/79)\u001b[K\rremote: Counting objects:  82% (65/79)\u001b[K\rremote: Counting objects:  83% (66/79)\u001b[K\rremote: Counting objects:  84% (67/79)\u001b[K\rremote: Counting objects:  86% (68/79)\u001b[K\rremote: Counting objects:  87% (69/79)\u001b[K\rremote: Counting objects:  88% (70/79)\u001b[K\rremote: Counting objects:  89% (71/79)\u001b[K\rremote: Counting objects:  91% (72/79)\u001b[K\rremote: Counting objects:  92% (73/79)\u001b[K\rremote: Counting objects:  93% (74/79)\u001b[K\rremote: Counting objects:  94% (75/79)\u001b[K\rremote: Counting objects:  96% (76/79)\u001b[K\rremote: Counting objects:  97% (77/79)\u001b[K\rremote: Counting objects:  98% (78/79)\u001b[K\rremote: Counting objects: 100% (79/79)\u001b[K\rremote: Counting objects: 100% (79/79), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (78/78), done.\u001b[K\n",
+            "remote: Total 616 (delta 45), reused 4 (delta 1), pack-reused 537\u001b[K\n",
+            "Receiving objects: 100% (616/616), 26.31 MiB | 20.04 MiB/s, done.\n",
+            "Resolving deltas: 100% (380/380), done.\n",
+            "/content/cloned-repo/cloned-repo\n",
             " Admission_Predict.csv\t\t       LogReg_Titanic.ipynb\n",
             " bank.csv\t\t\t       NaiveBayesBernoulli.ipynb\n",
             " bank-full.csv\t\t\t       NaiveBayesGaussian2.ipynb\n",
@@ -110,6 +110,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "854P6UTZWrvP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Import the necessary libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ccgtIx7YpSch",
@@ -126,6 +136,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xqOc16mhWuSK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Define a Python function for plotting the data and models"
+      ]
     },
     {
       "cell_type": "code",
@@ -168,6 +188,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zOjbAMlCW3Bx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SkmuQCG1q3lY",
@@ -180,6 +210,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G1_I1ipJW5Mf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Prepare the data for ML"
+      ]
     },
     {
       "cell_type": "code",
@@ -208,15 +248,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "urkJgPO-XAZo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the wolves and cows"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dmY0vVpUSMPj",
         "colab_type": "code",
+        "outputId": "b44fb8e7-bb22-4e5a-d40b-fd77c8967f14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "ce5ead82-9186-4fe6-fe8b-6892bb776571"
+        }
       },
       "source": [
         " # plot the wolves and cows\n",
@@ -230,7 +280,7 @@
         "#X = cows\n",
         "#o = wolves"
       ],
-      "execution_count": 60,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -248,15 +298,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wJCy2zL4XFN4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Find a fence with Linear Regression"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Dqh0sr1RVF-o",
         "colab_type": "code",
+        "outputId": "6bad3b55-c507-4548-c0a3-a698bb5d34fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "142f1d0f-94ea-4530-acfd-801e07fc3025"
+        }
       },
       "source": [
         "clf = linear_model.LogisticRegression()\n",
@@ -266,7 +326,7 @@
         "pl.figure(figsize=[10,10])\n",
         "pl.show()"
       ],
-      "execution_count": 68,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,15 +355,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sXKy0epMXSkn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Find a fence boundary with Decision Trees"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-Q5z5EpGVsrQ",
         "colab_type": "code",
+        "outputId": "1d548f1e-b37b-4116-bc47-962cbede0a89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "2d5e13e4-256e-4ddb-ec58-89953a898555"
+        }
       },
       "source": [
         "clf = tree.DecisionTreeClassifier()\n",
@@ -313,7 +383,7 @@
         "pl.figure(figsize=[10,10])\n",
         "pl.show()"
       ],
-      "execution_count": 69,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "display_data",
@@ -342,15 +412,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NAJNjhk9XXLc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Find the fence boundary with SVM"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CGt3frhaVzZF",
         "colab_type": "code",
+        "outputId": "9a54864f-80df-4df7-a8a6-2d150ab5b807",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        },
-        "outputId": "cbedf32a-5b8b-4387-c7e5-25a272c8167a"
+        }
       },
       "source": [
         "clf = svm.SVC()\n",
@@ -360,7 +440,7 @@
         "pl.figure(figsize=[10,10])\n",
         "pl.show()"
       ],
-      "execution_count": 70,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "display_data",
