--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -78,6 +78,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HgmhT8qx7mJn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "znKs_HL8zA2l",
@@ -98,7 +108,7 @@
       "metadata": {
         "id": "GpG0dbjhzueg",
         "colab_type": "code",
-        "outputId": "c54d982f-b262-4f3c-93d8-3bebe5109c69",
+        "outputId": "279d2c31-fe59-4f12-d5cb-161f26ad9e3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
@@ -107,7 +117,7 @@
       "source": [
         "df"
       ],
-      "execution_count": 38,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +262,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 9
         }
       ]
     },
@@ -263,7 +273,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Reduce the dataset to 100 rows"
+        "Reduce the dataset to 100 rows (to show that SVM works on a small dataset)"
       ]
     },
     {
@@ -300,7 +310,7 @@
       "metadata": {
         "id": "P_9jwtsh0vuP",
         "colab_type": "code",
-        "outputId": "7afbbc17-f23c-4563-8140-cb1810a6f2e1",
+        "outputId": "3e857716-046d-4c58-df45-8915755a8b9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -321,7 +331,7 @@
         "plt.scatter(versicolor_x,versicolor_y,marker='o',color='red')\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -415,7 +425,7 @@
       "metadata": {
         "id": "q0WEZAsq2RxF",
         "colab_type": "code",
-        "outputId": "9e2f496c-e51e-42b7-ae61-1396d46fffed",
+        "outputId": "9d3a53cb-d686-4b1e-b7d4-c8ba981be52c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -425,7 +435,7 @@
         "clf = SVC(kernel='linear')\n",
         "clf.fit(x_train,y_train)"
       ],
-      "execution_count": 43,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +458,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 14
         }
       ]
     },
@@ -467,7 +477,7 @@
       "metadata": {
         "id": "6eDqIksf6MTz",
         "colab_type": "code",
-        "outputId": "f52dc4c8-29eb-489f-9d4a-8419eea6a014",
+        "outputId": "6d4d9807-be06-4d56-9bae-6355ff294ed5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -477,7 +487,7 @@
         "y_pred = clf.predict(x_test)\n",
         "print(accuracy_score(y_test,y_pred))"
       ],
-      "execution_count": 44,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +507,7 @@
       "source": [
         "# **Create the SVM model from scratch**<br>\n",
         "\n",
-        "α(0.0001) is the learning rate and the regularization parameter λ is set to 1/epochs. Therefore, the regularizing value reduces the number of epochs increases."
+        "α(0.0001) is the learning rate and the regularization parameter λ is set to 1/epochs. Therefore, the regularizing value deceases as the number of epochs increases."
       ]
     },
     {
@@ -549,7 +559,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We now clip the weights as the test data contains only 10 data points. We extract the features from the test data and predict the values. We obtain the predictions and compare it with the actual values and print the accuracy of our model."
+        "Extract the features from the test data and predict the values. We obtain the predictions and compare it with the actual values and print the accuracy of our model."
       ]
     },
     {
@@ -557,10 +567,14 @@
       "metadata": {
         "id": "iYBWswOb2KBf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "7cd2611c-d201-435e-e36f-37640fac5dfc"
       },
       "source": [
-        "## Clip the weights \n",
+        "## Use only the first 10 weights to match the 10 test data points\n",
         "index = list(range(10,90))\n",
         "w1 = np.delete(w1,index)\n",
         "w2 = np.delete(w2,index)\n",
@@ -574,8 +588,19 @@
         "test_f1 = test_f1.reshape(10,1)\n",
         "test_f2 = test_f2.reshape(10,1)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: DeprecationWarning: in the future out of bounds indices will raise an error instead of being ignored by `numpy.delete`.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: DeprecationWarning: in the future out of bounds indices will raise an error instead of being ignored by `numpy.delete`.\n",
+            "  after removing the cwd from sys.path.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -592,7 +617,7 @@
       "metadata": {
         "id": "DufyB6pf3C5R",
         "colab_type": "code",
-        "outputId": "84fdb2c7-3d58-4e25-c474-cd38d48ec2a3",
+        "outputId": "5bbf3518-e890-48fc-e995-9d3cae1d6040",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -610,12 +635,12 @@
         "\n",
         "print(accuracy_score(y_test,predictions))"
       ],
-      "execution_count": 47,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1.0\n"
+            "0.9\n"
           ],
           "name": "stdout"
         }
