--- a/HP1 Cars.ipynb
+++ b/HP1 Cars.ipynb
@@ -183,7 +183,9 @@
         "colab_type": "text"
       },
       "source": [
-        "For this tutorial, drop the rows that contain NA. For some cases you make need to change missing values instead."
+        "For this tutorial:\n",
+        "1. You can drop the missing rows<br>\n",
+        "2. Use the information at the end of this lab for the missing data values. "
       ]
     },
     {
@@ -303,6 +305,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lUyZutHEuvqn",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Tune the Test-Training set split**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "_p9qU-wsu12c",
@@ -310,7 +322,8 @@
         "colab": {}
       },
       "source": [
-        "train_dataset = dataset.sample(frac=0.8,random_state=0)\n",
+        "#0.5 - 0.95\n",
+        "train_dataset = dataset.sample(frac=0.5,random_state=0)\n",
         "test_dataset = dataset.drop(train_dataset.index)\n",
         "print(\"done\")"
       ],
@@ -442,7 +455,14 @@
         "colab_type": "text"
       },
       "source": [
-        "###Define the model"
+        "# **Define the model**\n",
+        "1. Change the number of neurons in the model\n",
+        "\n",
+        "2. Try different activation functions:\n",
+        ">sigmoid<br>\n",
+        "tanh<br>\n",
+        "relu<br>\n",
+        "leaky_relu<br>"
       ]
     },
     {
@@ -460,8 +480,10 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(64, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
-        "    layers.Dense(64, activation=tf.nn.relu),\n",
+        "    #Change the number of neurons\n",
+        "    #Change the activation function                      \n",
+        "    layers.Dense(12, activation=tf.nn.sigmoid,input_shape=([len(train_dataset.keys())]),),\n",
+        "    layers.Dense(12, activation=tf.nn.sigmoid),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -524,7 +546,7 @@
       "source": [
         "### Train the model\n",
         "\n",
-        "Train the model for 1000 epochs, and record the training and validation accuracy in the `history` object.\n",
+        "Train the model and record the training and validation accuracy in the `history` object.\n",
         "\n",
         "ML Vocabulary: https://towardsdatascience.com/epoch-vs-iterations-vs-batch-size-4dfb9c7ce9c9"
       ]
@@ -583,7 +605,7 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS = 100\n",
+        "EPOCHS = 1000\n",
         "model = build_model()\n",
         "\n",
         "# The patience parameter is the amount of epochs to check for improvement\n",
