--- a/HP3 boston_housing.ipynb
+++ b/HP3 boston_housing.ipynb
@@ -6,7 +6,7 @@
       "name": "boston_housing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPJB00F0yiLgXPlJbGuQEXk",
+      "authorship_tag": "ABX9TyNL1xBcSoQfqJzSAVQg4S9d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,6 +205,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vItcoFKyz6g4",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Tune the train-test split**\n",
+        "Select a split frac = 0.5 to 0.95"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UrWchrJLt33i",
@@ -212,7 +223,7 @@
         "colab": {}
       },
       "source": [
-        "train_dataset = boston_housing_data.sample(frac=0.8,random_state=0)\n",
+        "train_dataset = boston_housing_data.sample(frac=0.5,random_state=0)\n",
         "test_dataset = boston_housing_data.drop(train_dataset.index)\n",
         "print(\"done\")"
       ],
@@ -300,7 +311,15 @@
         "colab_type": "text"
       },
       "source": [
-        "# **The model**"
+        "# **The model**\n",
+        "Modify the model<br>\n",
+        "Change the number of neurons per layer<br>\n",
+        "Change the numbrer of layers<br>\n",
+        "Change the activation function:<br>\n",
+        ">sigmoid<br>\n",
+        "tanh<br>\n",
+        "relu<br>\n",
+        "leaky_relu<br>"
       ]
     },
     {
@@ -316,10 +335,10 @@
         "\n",
         "def build_model():\n",
         "  model = keras.Sequential([\n",
-        "    layers.Dense(8, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
+        "    layers.Dense(8, activation=tf.nn.sigmoid,input_shape=([len(train_dataset.keys())]),),\n",
         "    #layers.Dropout(0.2),\n",
-        "    #layers.Dense(8, activation=tf.nn.relu),\n",
-        "    layers.Dense(8, activation=tf.nn.relu),\n",
+        "    #layers.Dense(8, activation=tf.nn.sigmoid),\n",
+        "    layers.Dense(8, activation=tf.nn.sigmoid),\n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -355,7 +374,10 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Train the model**"
+        "# **Train the model**<br>\n",
+        "Usually, you would want to change the number of epochs but in this case, we are using early stopping. \n",
+        "<br><br>\n",
+        "Tune the batch size"
       ]
     },
     {
@@ -374,7 +396,8 @@
         "# The patience parameter is the amount of epochs to check for improvement\n",
         "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
         "\n",
-        "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,\n",
+        "#Tune the batch_size\n",
+        "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,batch_size=2,\n",
         "                    validation_split = 0.2, verbose=0, callbacks=[early_stop])\n"
       ],
       "execution_count": 0,
